--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/contribute": "^1.0",
         "drupal/core": "~8.5.3",
         "drupal/ctools": "^3.0",
+        "drupal/discourse_sso": "^1.0",
         "drupal/entityqueue": "^1.0",
         "drupal/feeds": "^3.0@alpha",
         "drupal/field_collection": "^1.0@alpha",
