--- a/drush/sites/self.site.yml
+++ b/drush/sites/self.site.yml
@@ -1,14 +1,12 @@
 # Edit or remove this file as needed.
 # Docs at https://github.com/drush-ops/drush/blob/master/examples/example.site.yml
 
-#prod:
-#  host: prod.domain.com
-#  user: www-admin
-#  root: /path/to/drupal
-#  uri: http://www.example.com
-#
-#stage:
-#  host: stage.domain.com
-#  user: www-admin
-#  root: /path/to/drupal
-#  uri: http://stage.example.com
+prod:
+  host: leap.fi.edu
+  user: todd
+  root: /var/www/leap
+  uri: http://leap.fi.edu
+
+local:
+  root: /var/www/leap-composer/web
+  uri: http://localhost/leap-composer/web
