--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "drupal/module_filter": "^3.1",
         "drupal/pathauto": "^1.2",
         "drupal/permissions_by_term": "^1.53",
+        "drupal/smtp": "^1.0@beta",
         "drupal/video_embed_field": "^2.0",
         "drupal/webform": "^5.0",
         "drush/drush": "^9.0.0",
