--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
     "require": {
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
-        "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal-composer/drupal-scaffold": "dev-master",
         "drupal/address": "^1.4",
         "drupal/admin_toolbar": "^1.24",
         "drupal/auto_entitylabel": "^2.1",
         "drupal/block_class": "^1.0@alpha",
         "drupal/console": "^1.0.2",
         "drupal/contribute": "^1.0",
-        "drupal/core": "~8.5.3",
+        "drupal/core": "^8.6.0",
         "drupal/ctools": "^3.0",
         "drupal/discourse_sso": "^1.0",
         "drupal/entityqueue": "^1.0",
@@ -53,7 +53,7 @@
         "webmozart/path-util": "^2.3"
     },
     "require-dev": {
-        "webflo/drupal-core-require-dev": "~8.5.3"
+        "webflo/drupal-core-require-dev": "^8.6.0"
     },
     "conflict": {
         "drupal/drupal": "*"
