--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "drupal/geofield_map": "^2.3",
         "drupal/google_analytics": "^2.2",
         "drupal/honeypot": "^1.27",
-        "drupal/masquerade": "^2.0@beta",
+        "drupal/masquerade": "^2.0",
         "drupal/me_redirect": "^1.0@beta",
         "drupal/menu_link_attributes": "^1.0",
         "drupal/metatag": "^1.5",
