--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "drupal/roleassign": "^1.0",
         "drupal/smtp": "^1.0@beta",
         "drupal/video_embed_field": "^2.0",
+        "drupal/view_unpublished": "^1.0",
         "drupal/webform": "^5.0",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
