--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "dev-master",
         "drupal/address": "^1.4",
-        "drupal/admin_toolbar": "^1.24",
-        "drupal/auto_entitylabel": "^2.1",
+        "drupal/admin_toolbar": "^2.0",
+        "drupal/auto_entitylabel": "^3.0",
         "drupal/better_exposed_filters": "^3.0",
         "drupal/block_class": "^1.0@alpha",
         "drupal/block_content_permissions": "^1.6",
@@ -44,6 +44,7 @@
         "drupal/menu_link_attributes": "^1.0",
         "drupal/metatag": "^1.5",
         "drupal/module_filter": "^3.1",
+        "drupal/paragraphs": "^1.10",
         "drupal/pathauto": "^1.2",
         "drupal/permissions_by_term": "^2.6",
         "drupal/roleassign": "^1.0",
