Added new modules

--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,12 @@
         "drupal/core": "^8.6.0",
         "drupal/ctools": "^3.0",
         "drupal/discourse_sso": "^1.0",
+        "drupal/entity_embed": "^1.0",
         "drupal/entityqueue": "^1.0",
         "drupal/feeds": "^3.0@alpha",
         "drupal/field_collection": "^1.0@alpha",
         "drupal/field_group": "^3.0",
+        "drupal/fitvids": "^1.0",
         "drupal/geocoder": "^2.0",
         "drupal/geofield": "^1.0",
         "drupal/geofield_map": "^2.3",
