--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/core": "^8.6.0",
         "drupal/ctools": "^3.0",
         "drupal/discourse_sso": "^1.0",
+        "drupal/entity_browser": "^2.2",
         "drupal/entity_embed": "^1.0",
         "drupal/entityqueue": "^1.0",
         "drupal/feeds": "^3.0@alpha",
