--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "composer/installers": "^1.2",
+        "composer/installers": "^1.7",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "dev-master",
         "drupal/address": "^1.4",
@@ -27,7 +27,7 @@
         "drupal/block_content_permissions": "^1.6",
         "drupal/console": "^1.0.2",
         "drupal/contribute": "^1.0",
-        "drupal/core": "^8.6.0",
+        "drupal/core-recommended": "^8.8",
         "drupal/ctools": "^3.0",
         "drupal/discourse_sso": "^1.0",
         "drupal/entity_browser": "^2.2",
