--- a/web/themes/custom/sis/sis.libraries.yml
+++ b/web/themes/custom/sis/sis.libraries.yml
@@ -2,6 +2,12 @@ global-styles:
   version: 1.x
   css:
     theme:
-      css/overrides.css: {}
-
+      css/style.css: {}
+ui-behaviors:
+  version: 1.x
+  js:
+    js/script.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
 
