--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "drupal/entity_embed": "^1.0",
         "drupal/entityqueue": "^1.0",
         "drupal/feeds": "^3.0@alpha",
-        "drupal/field_collection": "^1.0@alpha",
+        "drupal/field_collection": "3.x-dev@dev",
+        "drupal/field_collection_to_paragraphs": "^2.0@beta",
         "drupal/field_group": "^3.0",
         "drupal/fitvids": "^1.0",
         "drupal/geocoder": "^2.0",
