--- a/composer.json
+++ b/composer.json
@@ -53,16 +53,21 @@
         "drupal/permissions_by_term": "^2.6",
         "drupal/roleassign": "^1.0",
         "drupal/smtp": "^1.0@beta",
+        "drupal/upgrade_status": "^3.0",
         "drupal/video_embed_field": "^2.0",
         "drupal/view_unpublished": "^1.0",
         "drupal/webform": "^5.0",
-        "drush/drush": "^9.0.0",
+        "drush/drush": "^10.0",
+        "symfony/css-selector": "4.4.25 as 3.4.47",
+        "symfony/dom-crawler": "4.2.12 as 3.4.47",
+        "symfony/filesystem": "4.4.26 as 3.4.47",
+        "symfony/finder": "4.4.25 as 3.4.47",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3"
     },
     "require-dev": {
-
+        "drupal/core-dev": "8.9.x"
     },
     "conflict": {
         "drupal/drupal": "*"
