Module updates to prepare for Drupal 9

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,6 @@
         "drupal/block_class": "^1.0@alpha",
         "drupal/block_content_permissions": "^1.6",
         "drupal/console": "^1.0.2",
-        "drupal/contribute": "^1.0",
         "drupal/core-recommended": "^8.8",
         "drupal/ctools": "^3.0",
         "drupal/entity_browser": "^2.2",
@@ -35,11 +34,11 @@
         "drupal/feeds": "^3.0@alpha",
         "drupal/field_group": "^3.0",
         "drupal/fitvids": "^1.0",
-        "drupal/geocoder": "^2.0",
+        "drupal/geocoder": "^3.20",
         "drupal/geofield": "^1.0",
         "drupal/geofield_map": "^2.3",
         "drupal/google_analytics": "^2.2",
-        "drupal/honeypot": "^1.27",
+        "drupal/honeypot": "^2.0",
         "drupal/inline_entity_form": "^1.0",
         "drupal/masquerade": "^2.0",
         "drupal/me_redirect": "^1.0@beta",
@@ -48,13 +47,14 @@
         "drupal/module_filter": "^3.1",
         "drupal/paragraphs": "^1.10",
         "drupal/pathauto": "^1.2",
-        "drupal/permissions_by_term": "^2.6",
+        "drupal/permissions_by_term": "^2.34",
         "drupal/roleassign": "^1.0",
         "drupal/smtp": "^1.0@beta",
         "drupal/upgrade_status": "^3.0",
+        "drupal/user_current_paths": "^2.0",
         "drupal/video_embed_field": "^2.0",
         "drupal/view_unpublished": "^1.0",
-        "drupal/webform": "^5.0",
+        "drupal/webform": "^6.1@beta",
         "drush/drush": "^10.0",
         "symfony/css-selector": "4.4.25 as 3.4.47",
         "symfony/dom-crawler": "4.2.12 as 3.4.47",
