--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/geofield": "^1.0",
         "drupal/geofield_map": "^2.3",
         "drupal/google_analytics": "^2.2",
+        "drupal/google_tag": "^1.4",
         "drupal/honeypot": "^2.0",
         "drupal/inline_entity_form": "^1.0",
         "drupal/masquerade": "^2.0",
