--- a/drush/sites/sis.site.yml
+++ b/drush/sites/sis.site.yml
@@ -2,7 +2,7 @@
 # Docs at https://github.com/drush-ops/drush/blob/master/examples/example.site.yml
 
 prod:
-  host: scienceinthesummer.fi.edu
+  host: leap.fi.edu
   user: todd
   root: /var/www/leap/web
   uri: http://scienceinthesummer.fi.edu
