--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "drupal/feeds": "^3.0@alpha",
         "drupal/field_group": "^3.0",
         "drupal/fitvids": "^1.0",
+        "drupal/focal_point": "^2.0@alpha",
         "drupal/geocoder": "^3.20",
         "drupal/geofield": "^1.0",
         "drupal/geofield_map": "^2.3",
@@ -69,6 +70,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
+        "platform": {
+           "php": "7.4.21"
+        },
         "sort-packages": true
     },
     "autoload": {
