--- a/composer.json
+++ b/composer.json
@@ -55,14 +55,13 @@
         "drupal/user_current_paths": "^2.0",
         "drupal/video_embed_field": "^2.0",
         "drupal/view_unpublished": "^1.0",
+        "drupal/views_data_export": "^1.2",
         "drupal/webform": "^6.1@beta",
         "drush/drush": "^10.0",
         "geocoder-php/google-maps-provider": "^4.6",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3"
-    },
-    "require-dev": {
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -73,7 +72,13 @@
         "platform": {
            "php": "7.4.21"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "drupal/console-extend-plugin": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-project-message": true
+        }
     },
     "autoload": {
         "classmap": [
