--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/geofield_map": "^2.3",
         "drupal/google_analytics": "^2.2",
         "drupal/google_tag": "^1.6",
+        "drupal/hacked": "^2.0@beta",
         "drupal/honeypot": "^2.1",
         "drupal/inline_entity_form": "^1.0",
         "drupal/masquerade": "^2.0",
