Added diff module

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "drupal/core-project-message": "^9",
         "drupal/core-recommended": "^9",
         "drupal/ctools": "^3.0",
+        "drupal/diff": "^1.1",
         "drupal/entity_browser": "^2.2",
         "drupal/entity_embed": "^1.0",
         "drupal/entityqueue": "^1.0",
